...
    "auth.logIn" : {
      "comment" : "Log in button text",
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Log In"
          }
        }
      }
    },
    "auth.login.api_token" : {
      "comment" : "Explains what an API token allows",
...
    "auth.password" : {
      "comment" : "Password field",
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Password"
          }
        }
      }
    },
    "auth.personalApiToken" : {
      "comment" : "Personal API token section",
...
            "value" : "Verifying"
          }
        }
      }
    },
    "auth.username" : {
      "comment" : "Username"
    },
    "auth.usernamePassword" : {
      "comment" : "Username & Password"
    },
    "auth.useToken" : {
      "comment" : "Use Token"
...
    },
    "common.favorites" : {
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Favorites"
          }
        }
      }
    },
    "common.filename" : {
      "extractionState" : "manual",
...
    "labels.title" : {
      "comment" : "Labels menu item\nLabels navigation title\nTitle for labels\nTitle for labels view",
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Labels"
          }
        }
      }
    },
    "labels.view.loading" : {
      "comment" : "Label shown when loading labels",
...
    "navigation.projects" : {
      "comment" : "Projects menu item\nProjects navigation title",
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Projects"
          }
        }
      }
    },
    "onboarding.analytics_consent.allow_button" : {
      "comment" : "Button for allowing analytics",
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Allow Anonymous Analytics"
          }
        }
      }
    },
    "onboarding.analytics_consent.deny_button" : {
      "comment" : "Button for denying analytics",
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "No Thanks"
          }
        }
      }
    },
    "onboarding.analytics_consent.text" : {
      "comment" : "Text for analytics consent sheet",
...
    "settings.title" : {
      "comment" : "Settings menu item\nTitle for settings",
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
        }
      }
    },
    "settings.view.token.expiresIn %@" : {
      "comment" : "Label in Settings showing when the JWT token expires. Placeholder is the formatted duration (e.g. '5 minutes')",
...
